--- a/EntregaDiseño/layoutFIjo/fluidoContenido.css
+++ b/EntregaDiseño/layoutFIjo/fluidoContenido.css
@@ -56,7 +56,7 @@ ul.arriba li:hover{
   margin-left: auto;
   margin-right: auto;
   display: table;
-  padding-top: 110px;
+  padding-top: 11%;
   margin-bottom: auto;
   max-width: 960px;
 }
