--- a/EntregaDiseño/layoutFIjo/fluidoContenido.css
+++ b/EntregaDiseño/layoutFIjo/fluidoContenido.css
@@ -86,7 +86,7 @@ section{
 }
 .entradaDos{
   margin: auto;
-  padding: 10px;
+  padding: 1%;
   background: linen;
   display: table-cell;
   margin-top: 5px;
